--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Tauri + Solid + Typescript App</title>
   </head>
 
-  <body>
+  <body class="h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-full w-full"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
